--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+main {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+@media (min-width: 900px) {
+  main {
+    margin-left: 80px;
+    margin-right: 80px;
+  }
+}
