--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,7 @@ header nav ul {
 }
 
 .navigation_mobil {
+  border-bottom: 2px solid black;
   display: flex;
   justify-content: space-between;
 }
@@ -313,6 +314,7 @@ header nav ul {
   }
 
   .navigation_mobil {
+    
     display: none;
   }
 
@@ -684,11 +686,11 @@ header nav ul {
   /* sizes */
 
   /* mobile */
-  --h1-mobile: 2.488rem;
-  --h2-mobile: 2.074rem;
-  --h3-mobile: 1.728rem;
-  --h4-mobile: 1.44rem;
-  --h5-mobile: 1.2rem;
+  --h1-mobile: 1.802rem;
+  --h2-mobile: 1.602rem;
+  --h3-mobile: 1.424rem;
+  --h4-mobile: 1.266rem;
+  --h5-mobile: 1.125rem;
   --body-mobile: 1rem;
   --button-mobile: 0.938rem;
   --footer-mobile: 0.938rem;
@@ -699,12 +701,12 @@ header nav ul {
 
   /* desktop */
 
-  --h1-desktop: 5.653rem;
-  --h2-desktop: 3.998rem;
-  --h3-desktop: 2.827rem;
-  --h4-desktop: 1.999rem;
-  --h5-desktop: 1.414rem;
-  --body-desktop: 1.125rem;
+  --h1-desktop: 3.052rem;
+  --h2-desktop: 2.441rem;
+  --h3-desktop: 1.953rem;
+  --h4-desktop: 1.563rem;
+  --h5-desktop: 1.25rem;
+  --body-desktop: 1rem;
   --banner-desktop: 15.625rem;
   --button-desktop: 1.375rem;
   --progress-heading: 2rem;
