--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@ body {
   font-size: var(--h2-mobile);
 }
 
+
 .toggle-btn {
   background-color: transparent;
   border: none;
@@ -301,7 +302,7 @@ header nav ul {
   nav ul {
     display: flex;
     flex-flow: row;
-    margin-top: var(--m-spacing-desktop);
+    margin-top: var(--xs-spacing-desktop);
   }
 
   .navigation_desktop {
@@ -321,12 +322,13 @@ header nav ul {
   nav {
     display: flex;
     justify-content: space-between;
-    height: 100px;
+    height: 70px;
   }
 
   .secondary_nav {
     margin-right: var(--xxl-spacing-desktop);
-    margin-top: var(--s-spacing-desktop);
+    margin-top: var(--xxxs-spacing-desktop);
+    
   }
 
   /* farveskift desktop  */
@@ -709,7 +711,7 @@ header nav ul {
   --h5-desktop: 1.25rem;
   --body-desktop: 1rem;
   --banner-desktop: 15.625rem;
-  --button-desktop: 1.375rem;
+  --button-desktop: 1.2rem;
   --progress-heading: 2rem;
   --header_text_desktop: 1.2rem;
 
