--- a/src/style.css
+++ b/src/style.css
@@ -74,6 +74,7 @@ nav ul {
   flex-flow: column;
   margin-top: var(--xxl-spacing-mobile);
   margin-left: var(--xxl-spacing-mobile);
+
   /* height: 23rem; */
 }
 
@@ -312,6 +313,62 @@ header nav ul {
   }
   95% {
     opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.illustration_bb {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+
+#bb_blink {
+  animation-name: bb_blink;
+  animation: bb_blink 4s infinite;
+  animation-delay: 0s;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+  grid-column: 1;
+  grid-row: 1;
+}
+
+@keyframes bb_blink {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+#bb_ikke_blink {
+  animation-name: bb_ikke_blink;
+  animation: bb_ikke_blink 4s infinite;
+  animation-delay: 0s;
+  animation-timing-function: linear;
+  animation-direction: alternate;
+  grid-column: 1;
+  grid-row: 1;
+}
+
+@keyframes bb_ikke_blink {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0;
   }
   100% {
     opacity: 1;
