--- a/src/style.css
+++ b/src/style.css
@@ -16,13 +16,13 @@ html {
 .vis {
   display: block;
 }
-input {
+/* input {
   border: var(--border) solid black;
   height: var(--m-spacing-mobile);
   border-radius: var(--radius-mobile);
   padding-left: var(--xs-spacing-mobile);
   max-width: 600px;
-}
+} */
 
 .valgt {
   border: 2px solid var(--rust-500);
